--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,13 +6,13 @@
     </header>
 
     <div id="content">
-        <%= @post.content %>
+        <%= markdown @post.content %>
     </div>
 
     <hr>
 
     <div id="share_box">
-        <p>Share <%= @post.title %></p>
+        <p>Share </p>
         <!-- Twitter -->
     <a onclick="javascript:window.open('http://twitter.com/share?text=<%= @post.title %> by @mitchmurry - &amp;url=<%= url_for([@post, {only_path: false}]) %>', '_blank', 'width=800, height=500, top=200, left=300');void(0);"><i class="fa fa-twitter"></i></a>
     <!-- Facebook -->
@@ -30,4 +30,3 @@
 <br>
 
 <%= link_to "Edit", edit_post_path(@post) %>
-<%= link_to "Delete", post_path(@post), method: :delete, data: { confirm: "Are you sure you want to delete this post?"} %>
